feat: update duration filters to 15d, benefits hero image to R2, and fix unlimited bundle sorting
- Update duration filter from 14 days to 15 days across all components and 6 languages (en, fr, hi, ro, es, de)
- Update Benefits page hero image to Cloudflare R2 CDN with improved contrast
- Fix unlimited bundle sorting to only push to bottom when sorting by data column
- Components updated: HomePageTemplate, Plans, RegionLanding, TravelSearchWidget, BundleList, BundleTableCompact

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1101,7 +1101,7 @@
     "duration": {
       "all": "Todos",
       "7d": "7 Días",
-      "14d": "14 Días",
+      "15d": "15 Días"
       "30d": "30 Días",
       "90d": "90 Días",
       "1yr": "1 Año"
