--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -1093,7 +1093,8 @@
       "findPlans": "प्लान खोजें",
       "selectCountry": "कृपया कम से कम एक गंतव्य चुनें",
       "noCountries": "कोई देश नहीं मिला",
-      "maxCountries": "मल्टी-कंट्री प्लान के लिए 3 देश तक चुनें"
+      "maxCountries": "मल्टी-कंट्री प्लान के लिए 3 देश तक चुनें",
+      "searching": "खोज रहे हैं..."
     },
     "partner": {
       "recommendedBy": "द्वारा अनुशंसित"
