feat: update footer with ZenMinutes branding and improve regional bundle toggle
- Add 'Powered by ZenMinutes SRL' link to footer copyright section
- Change regional toggle text from 'Regional Plans' to 'Include Regional Plans'
- Update toggle behavior to show both country AND regional bundles when enabled
- Previously: toggle ON showed only regional bundles
- Now: toggle OFF shows country-only, toggle ON shows all bundles
- Updated translations for all 6 languages (en, de, es, fr, ro, hi)
- Applied changes across HomePage, BundleList, RegionLanding, and Plans components

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -1084,7 +1084,7 @@
     },
     "results": {
       "countryPlans": "Ländertarife",
-      "regionalPlans": "Regionaltarife",
+      "regionalPlans": "Regionaltarife einbeziehen",
       "showRegional": "Regionaltarife anzeigen ({{count}} verfügbar)",
       "viewRegional": "Anzeigen",
       "backToCountry": "Zurück zu Ländertarifen",
