feat: Comprehensive billing info management and Romanian form fixes
Major Changes:
============

1. ACCOUNT INFORMATION - BILLING INFO INTEGRATION
   - Added complete billing information form to Profile/Account Info page
   - Users can now view and edit billing details directly from account settings
   - Separated concerns: User info (name, phone, email) vs Billing info (address, VAT, etc.)
   - File: src/pages/profile/Profile.jsx
   - Includes all billing fields: country, state/county, city, address, company info, VAT codes

2. CHECKOUT FLOW OPTIMIZATION
   - Billing info form now only shows in checkout if NOT already saved
   - Backend validates billing completeness via hasBillingInfo() API call
   - Streamlined checkout: pre-filled billing info for returning customers
   - Reduces friction in purchase flow for users with saved billing details
   - Files: BillingFormView.jsx, checkout page integration

3. BACKEND VALIDATION & USER METADATA SYNC
   - Backend properly validates required billing fields (country, city, state, etc.)
   - Syncs user first_name and last_name to auth.users metadata on update
   - Ensures consistency between billing_information table and Supabase auth
   - Pydantic models enforce field validation before database commits

4. ROMANIAN BILLING FORM - CASCADING DROPDOWN FIX
   - Fixed county/city cascading dropdown for București sectors
   - Normalized Romanian special characters (ȘS, ȚT) when looking up cities
   - Issue: County names use 'Sector 2 (București)' but regions.js uses 'SECTOR 2 (BUCURESTI)'
   - Applied normalization in both BillingFormView.jsx AND Profile.jsx
   - Files affected:
     * src/components/billing-info/BillingFormView.jsx (handleCountyChange, useEffect)
     * src/pages/profile/Profile.jsx (handleCountyChange, useEffect)

5. TRANSLATION COMPLETENESS
   - Added missing 'selectCountyFirst' placeholder to all language files
   - Languages: Romanian, French, German, Spanish, Hindi
   - Guides users to select county befor

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -391,6 +391,7 @@
     "selectCountry": "-- Land wählen --",
     "city": "Stadt",
     "selectCity": "-- Stadt wählen --",
+    "selectCountyFirst": "Wählen Sie zuerst das Bundesland",
     "state": "Bundesland",
     "selectCounty": "-- Bundesland wählen --",
     "phone": "Kontakt-Telefonnummer",
