--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -391,6 +391,7 @@
     "selectCountry": "-- Selecciona país --",
     "city": "Ciudad",
     "selectCity": "-- Selecciona ciudad --",
+    "selectCountyFirst": "Selecciona primero el condado",
     "state": "Estado",
     "selectCounty": "-- Selecciona condado --",
     "phone": "Teléfono de contacto",
