--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -391,6 +391,7 @@
     "selectCountry": "-- देश चुनें --",
     "city": "शहर",
     "selectCity": "-- शहर चुनें --",
+    "selectCountyFirst": "पहले काउंटी चुनें",
     "state": "राज्य",
     "selectCounty": "-- काउंटी चुनें --",
     "phone": "संपर्क फोन नंबर",
