--- a/public/locales/ro/translation.json
+++ b/public/locales/ro/translation.json
@@ -385,6 +385,7 @@
     "selectCountry": "-- Selectați țara --",
     "city": "Oraș",
     "selectCity": "-- Selectați orașul --",
+    "selectCountyFirst": "Selectați mai întâi județul",
     "state": "Județ",
     "selectCounty": "-- Selectați județul --",
     "phone": "Număr de telefon",
