Add PDF download button to How It Works page with language-specific PDFs

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -408,7 +408,8 @@
     "easyAndFast": "Einfach und schnell",
     "howToSetUpEsim": "So richten Sie Ihre eSIM ein",
     "step": "Schritt",
-    "of": "von"
+    "of": "von",
+    "downloadPDF": "Installationsanleitung herunterladen (PDF)"
   },
   "aboutUs": {
     "stayConnected": "Bleiben Sie verbunden",
