--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -408,7 +408,8 @@
     "easyAndFast": "Easy and fast",
     "howToSetUpEsim": "How to set up your eSIM",
     "step": "Step",
-    "of": "of"
+    "of": "of",
+    "downloadPDF": "Download installation instructions (PDF)"
   },
   "aboutUs": {
     "stayConnected": "Stay Connected",
