--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -408,7 +408,8 @@
     "easyAndFast": "Fácil y rápido",
     "howToSetUpEsim": "Cómo configurar tu eSIM",
     "step": "Paso",
-    "of": "de"
+    "of": "de",
+    "downloadPDF": "Descargar instrucciones de instalación (PDF)"
   },
   "aboutUs": {
     "stayConnected": "Mantente Conectado",
