--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -408,7 +408,8 @@
     "easyAndFast": "Simple et rapide",
     "howToSetUpEsim": "Comment configurer votre eSIM",
     "step": "Étape",
-    "of": "sur"
+    "of": "sur",
+    "downloadPDF": "Télécharger les instructions d'installation (PDF)"
   },
   "aboutUs": {
     "stayConnected": "Restez Connecté",
