--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -408,7 +408,8 @@
     "easyAndFast": "आसान और तेज़",
     "howToSetUpEsim": "अपना eSIM कैसे सेट करें",
     "step": "चरण",
-    "of": "का"
+    "of": "का",
+    "downloadPDF": "इंस्टॉलेशन निर्देश डाउनलोड करें (PDF)"
   },
   "aboutUs": {
     "stayConnected": "जुड़े रहें",
