--- a/public/locales/ro/translation.json
+++ b/public/locales/ro/translation.json
@@ -402,7 +402,8 @@
     "easyAndFast": "Ușor și rapid",
     "howToSetUpEsim": "Cum să-ți configurezi eSIM-ul",
     "step": "pas",
-    "of": "din"
+    "of": "din",
+    "downloadPDF": "Descarcă instrucțiuni de instalare (PDF)"
   },
   "aboutUs": {
     "stayConnected": "Rămâi conectat",
