refactor: simplify cashback disclaimer in all translations
- Remove VAT and processing fees exclusion clause from cashbackNote
- Keep only the core message about product value and promo discounts
- Updated across all 6 languages (en, de, fr, es, ro, hi)

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -569,7 +569,7 @@
     "comingSoon": "Demnächst verfügbar...",
     "cashbackRewards": "Cashback-Belohnungen",
     "cashbackDescription": "Nach {{threshold}} erfolgreichen Käufen erhalten Sie automatisch {{percentage}}% Cashback auf jeden weiteren qualifizierten Kauf in Ihr Guthaben!",
-    "cashbackNote": "Cashback-Prozentsatz wird nur auf den Produktwert angewendet (nach Aktionsrabatten). Ohne MwSt. und Bearbeitungsgebühren."
+    "cashbackNote": "Cashback-Prozentsatz wird nur auf den Produktwert angewendet (nach Aktionsrabatten)."
   },
   "appBanner": {
     "title": "In ChillSim App öffnen",
