--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -569,7 +569,7 @@
     "comingSoon": "जल्द ही आ रहा है...",
     "cashbackRewards": "कैशबैक इनाम",
     "cashbackDescription": "{{threshold}} सफल खरीद के बाद, आप स्वचालित रूप से {{percentage}}% कैशबैक अपने वॉलेट में हर योग्य खरीद पर प्राप्त करेंगे!",
-    "cashbackNote": "कैशबैक प्रतिशत केवल उत्पाद मूल्य पर लागू होता है (प्रोमो छूट के बाद)। VAT और प्रोसेसिंग शुल्क को छोड़कर।"
+    "cashbackNote": "कैशबैक प्रतिशत केवल उत्पाद मूल्य पर लागू होता है (प्रोमो छूट के बाद)।"
   },
   "appBanner": {
     "title": "ChillSim ऐप में खोलें",
