--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -569,7 +569,7 @@
     "comingSoon": "Prochainement...",
     "cashbackRewards": "Récompenses Cashback",
     "cashbackDescription": "Après {{threshold}} achats réussis, vous recevrez automatiquement {{percentage}}% de cashback dans votre portefeuille, sur chaque achat éligible par la suite !",
-    "cashbackNote": "Le pourcentage de cashback s'applique uniquement à la valeur des produits (après réductions promotionnelles). Exclut la TVA et les frais de traitement."
+    "cashbackNote": "Le pourcentage de cashback s'applique uniquement à la valeur des produits (après réductions promotionnelles)."
   },
   "appBanner": {
     "title": "Ouvrir dans l'App ChillSim",
