--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1097,11 +1097,10 @@
     },
     "duration": {
       "all": "Todos",
+      "1d": "1 Día",
+      "3d": "3 Días",
       "7d": "7 Días",
-      "15d": "15 Días",
-      "30d": "30 Días",
-      "90d": "90 Días",
-      "1yr": "1 Año"
+      "more": "Más"
     },
     "results": {
       "countryPlans": "Planes de País",
