--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -1097,11 +1097,10 @@
     },
     "duration": {
       "all": "सभी",
+      "1d": "1 दिन",
+      "3d": "3 दिन",
       "7d": "7 दिन",
-      "15d": "15 दिन",
-      "30d": "30 दिन",
-      "90d": "90 दिन",
-      "1yr": "1 साल"
+      "more": "अधिक"
     },
     "results": {
       "countryPlans": "देश प्लान",
