--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -1215,5 +1215,31 @@
       "cancel": "रद्द करें",
       "buyNow": "अभी खरीदें"
     }
+  },
+  "welcomeOffer": {
+    "title": "विशेष स्वागत ऑफर!",
+    "subtitle": "केवल नए ग्राहकों के लिए",
+    "description": "अपना पहला <strong>1GB यूरोप</strong> eSIM पैकेज सिर्फ <strong>€0.50</strong> में पाएं — 99% की भारी छूट।",
+    "bullet1": "पूरे EU में कवरेज",
+    "bullet2": "आपके पहले ऑर्डर पर सिर्फ €0.50",
+    "bullet3": "तुरंत एक्टिवेशन",
+    "getOffer": "मेरा स्वागत ऑफर पाएं",
+    "maybeLater": "शायद बाद में",
+    "successTitle": "आपका स्वागत कोड तैयार है!",
+    "successDescription": "अपनी विशेष 99% छूट पाने के लिए किसी भी <strong>1GB यूरोप eSIM</strong> पैकेज खरीदते समय नीचे दिए गए कोड का उपयोग करें।",
+    "promoCode": "आपका प्रोमो कोड:",
+    "copyCode": "कोड कॉपी करें",
+    "copied": "कॉपी हो गया!",
+    "howToUse": "इसका उपयोग कैसे करें:",
+    "step1": "कोई भी 1GB यूरोप eSIM पैकेज चुनें",
+    "step2": "चेकआउट पर <strong>WELCOME</strong> दर्ज करें",
+    "step3": "अपनी पहली eSIM के लिए सिर्फ €0.50 भुगतान करें",
+    "browsePackages": "eSIM पैकेज देखें",
+    "gotIt": "समझ गया!",
+    "widgetText": "स्वागत प्रोमो",
+    "widget": {
+      "title": "स्वागत ऑफर",
+      "badge": "99% छूट"
+    }
   }
 }
