--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -435,6 +435,7 @@
     "termsAndConditions": "नियम और शर्तें",
     "privacyPolicy": "गोपनीयता नीति",
     "cookiePolicy": "कुकी नीति",
+    "studentDiscounts": "छात्र छूट",
     "office": "कार्यालय",
     "email": "ईमेल",
     "phone": "फोन"
@@ -657,6 +658,34 @@
       "toggleEnabled": "आप विशेष डील्स प्राप्त कर रहे हैं",
       "toggleDisabled": "हां, मुझे विशेष डील्स भेजें!",
       "disclaimer": "आप किसी भी समय खाता जानकारी में अपनी प्राथमिकताएं बदल सकते हैं। हम केवल मूल्यवान ऑफ़र भेजते हैं - कोई स्पैम नहीं!"
+    }
+  },
+  "studentDiscounts": {
+    "title": "छात्र छूट",
+    "subtitle": "एक छात्र के रूप में आप <highlight>30% छूट कोड</highlight> प्राप्त कर सकते हैं जो किसी भी प्लान और स्थान पर उपयोग किया जा सकता है।",
+    "question": "आप कहां अध्ययन कर रहे हैं?",
+    "claimDiscount": "Student Beans के माध्यम से 30% छूट प्राप्त करें",
+    "terms": "नियम और शर्तें लागू होती हैं।",
+    "poweredBy": "द्वारा संचालित",
+    "badge": {
+      "percent": "30%",
+      "text": "छात्र छूट",
+      "save": "30% बचाएं"
+    },
+    "countries": {
+      "uk": "यूनाइटेड किंगडम",
+      "us": "संयुक्त राज्य अमेरिका",
+      "fr": "फ्रांस",
+      "de": "जर्मनी"
+    },
+    "cta": {
+      "browsePlans": "सभी eSIM प्लान देखें",
+      "reminder": "StudentBeans से अपना 30% छात्र छूट कोड प्राप्त करना न भूलें!"
+    },
+    "finalCta": {
+      "title": "कनेक्टेड रहने के लिए तैयार हैं?",
+      "description": "हमारे वैश्विक eSIM प्लान देखें और StudentBeans से अपने छात्र छूट कोड के साथ 30% बचाएं",
+      "button": "छात्र प्लान देखें"
     }
   },
   "landing": {
